# cantrip

./: CMakeDetermineRustCompiler.cmake  CMakeRustCompiler.cmake.in  CMakeRustInformation.cmake  CMakeTestRustCompiler.cmake  PREUPLOAD.cfg  README.md  easy-settings.cmake  preupload-clippy.sh  settings.cmake
apps/c/fibonacci/: Makefile  fibonacci.c
apps/c/hello/: hello.c
apps/c/libkata/arch/aarch64/: crt0.S
apps/c/libkata/make/: common.mk  sel4.mk
apps/c/suicide/: suicide.c
apps/rust/: Cargo.toml
apps/rust/fibonacci/: Cargo.toml  fibonacci.rs
apps/rust/hello/: Cargo.toml  hello.rs
apps/rust/keyval/: Cargo.toml  keyval.rs
apps/rust/libkata/make/: common.mk  sel4.mk
apps/rust/logtest/: Cargo.toml  Makefile  logtest.rs
apps/rust/panic/: Cargo.toml
apps/rust/playback/: Cargo.toml  Makefile  playback.rs
apps/rust/sound/: Cargo.toml  Makefile  sound.rs
apps/rust/timer/: Cargo.toml  Makefile  timer.rs
apps/system/: CMakeLists.txt  rust.cmake  system.camkes
apps/system/components/DebugConsole/: Cargo.toml  DebugConsole.camkes
apps/system/components/DebugConsole/cantrip-debug-console/: Cargo.toml
apps/system/components/DebugConsole/cantrip-line-reader/: build.rs
apps/system/components/DebugConsole/cantrip-shell/: Cargo.toml
apps/system/components/DebugConsole/kata-debug-console/: Cargo.toml
apps/system/components/DebugConsole/kata-shell/: Cargo.toml
apps/system/components/MailboxDriver/: MailboxDriver.camkes
apps/system/components/MailboxDriver/mailbox-driver/: Cargo.toml
apps/system/components/MailboxDriver/mailbox-interface/: Cargo.toml
apps/system/components/MemoryManager/cantrip-memory-component/: Cargo.toml
apps/system/components/MemoryManager/cantrip-memory-interface/: build.rs
apps/system/components/MemoryManager/kata-memory-component/: Cargo.toml
apps/system/components/MemoryManager/kata-memory-interface/: Cargo.toml
apps/system/components/MemoryManager/kata-memory-manager/: Cargo.toml
apps/system/components/MlCoordinator/cantrip-ml-component/: Cargo.toml  build.rs
apps/system/components/MlCoordinator/cantrip-ml-coordinator/: Cargo.toml
apps/system/components/MlCoordinator/fake-vec-core/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-component/: Cargo.toml
apps/system/components/MlCoordinator/kata-vec-core/: Cargo.toml
apps/system/components/MlCoordinator/springbok-vec-core/: Cargo.toml
apps/system/components/MlCoordinator/tests/: Cargo.toml
apps/system/components/OpenTitanUARTDriver/src/: driver.c
apps/system/components/ProcessManager/cantrip-proc-component/: Cargo.toml
apps/system/components/ProcessManager/cantrip-proc-manager/: Cargo.toml
apps/system/components/ProcessManager/kata-proc-component/: Cargo.toml
apps/system/components/SDKRuntime/: SDKRuntime.camkes
apps/system/components/SecurityCoordinator/: Cargo.toml  SecurityCoordinator.camkes
apps/system/components/SecurityCoordinator/cantrip-security-coordinator/: Cargo.toml
apps/system/components/SecurityCoordinator/cantrip-security-coordinator/src/: lib.rs  upload.rs
apps/system/components/SecurityCoordinator/cantrip-security-coordinator/src/fake/: mod.rs
apps/system/components/SecurityCoordinator/cantrip-security-coordinator/src/sec/: mod.rs
apps/system/components/cantrip-os-common/: Cargo.toml
apps/system/components/cantrip-os-common/src/model/: Cargo.toml  build.rs  mod.rs
apps/system/components/cantrip-os-common/src/model/feature/: dynamic_alloc.rs  fill_from_cpio.rs  fill_from_sec.rs
docs/: CantripGdbUserSpaceDebugging.md  GettingStarted.md  MemoryFootprint.md  PlatformDependencies.md  Testing.md
(+120 files in other folders)
