# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "cantrip-security-coordinator"
version = "0.1.0"
edition = "2021"

[features]
# NB: one must be selected; see cantrip-security-component/Cargo.toml
fake = ["cpio"]
sec = ["mailbox-driver"]

[dependencies]
ahash = { version = "0.8.6", default-features = false, features = ["compile-time-rng"] }
cantrip-memory-interface = { path = "../../MemoryManager/cantrip-memory-interface" }
cantrip-os-common = { path = "../../cantrip-os-common" }
cantrip-security-interface = { path = "../cantrip-security-interface" }
const-random = { version = "0.1.17" }
cpio = { git = "https://github.com/rcore-os/cpio", version = "0.1.0", optional = true }
hashbrown = { version = "0.14.2" }
log = { version = "0.4", features = ["release_max_level_info"] }
mailbox-driver = { path  = "../mailbox-driver", optional = true }
postcard = { version = "0.7", features = ["alloc"], default-features = false }
