[package]
name = "model"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../sel4-config" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# serde_yaml has a caret version requirement for indexmap ("^1.5.2"). Specify
# the version here so we can keep using the cargo 1.56.0-nightly toolchain.
indexmap = "=1.8"

[build-env]
SEL4_OUT_DIR = "${ROOTDIR}out/cantrip/kernel"

[features]
CONFIG_ARM_HYPERVISOR_SUPPORT = []
CONFIG_ARM_SMMU = []
# Select source for capdl component files
CONFIG_CAPDL_LOADER_FILL_FROM_SEC = [
    "mailbox-driver",
    "reg_constants",
]
CONFIG_CAPDL_LOADER_FILL_FROM_CPIO = ["cpio"]
CONFIG_CAPDL_LOADER_CC_REGISTERS = []
CONFIG_CAPDL_LOADER_STATIC_ALLOC = []
CONFIG_CAPDL_LOADER_WRITEABLE_PAGES = []
CONFIG_CAPDL_SHARED_FRAMES = []
CONFIG_DEBUG_BUILD = []
CONFIG_KERNEL_MCS = []
CONFIG_PRINTING = []
CONFIG_SMP_SUPPORT = []
CONFIG_VTX = []
# Enable inclusion of noisy logging in various areas
CONFIG_NOISY_UNTYPEDS = []
CONFIG_NOISY_CREATE_OBJECT = []
CONFIG_NOISY_HANDOFF = []
CONFIG_NOISY_INIT_CNODE = []
CONFIG_NOISY_INIT_VSPACE = []

[lib]
path = "mod.rs"

[dependencies]
capdl = { path = "../capdl" }
cpio = { path = "../../../../../../../../crates/cpio", optional = true }
cstr_core = "0.2.3"
log = "0.4"
modular-bitfield = "0.11.2"
num_enum = { version = ">=0.6.1", default-features = false }
postcard = { version = "0.7", features = [], default-features = false }
reg_constants = { path = "../reg_constants", optional = true }
sel4-sys = { path = "../sel4-sys", default-features = false, features = ["arch_generic"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
smallvec = "1.10"
static_assertions = "1.1"

[dependencies.mailbox-driver]
path = "../../../SecurityCoordinator/mailbox-driver"
default-features = false
features = ["rootserver"]
optional = true
